--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "vue": "^3.4.0",
-    "vue-router": "^4.2.0",
-    "axios": "^1.6.0"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
